Course page is adapted off slider

--- a/course/index.html
+++ b/course/index.html
@@ -51,29 +51,31 @@
       <section id="for">
         <div class="container">
           <h3 class="general-title">Кому подойдет данная программа?</h3>
-          <div class="col-md-10 col-md-offset-1">
-            <div class="for-item">
-              <div class="for-item-title"><img class="for-item-img" src="../img/icons/for-1.svg" alt="Новичкам"/>
-                <h4>Новичкам</h4>
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <div class="for-item">
+                <div class="for-item-title"><img class="for-item-title-img" src="../img/icons/for-1.svg" alt="Новичкам"/>
+                  <h4>Новичкам</h4>
+                </div>
+                <ul class="general-list general-list-black">
+                  <li>Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.</li>
+                  <li>Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.</li>
+                  <li>Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.</li>
+                  <li>Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.</li>
+                </ul>
               </div>
-              <ul class="general-list general-list-black">
-                <li>Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.</li>
-                <li>Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.</li>
-                <li>Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.</li>
-                <li>Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.</li>
-              </ul>
+              <div class="for-item">
+                <div class="for-item-title"><img class="for-item-title-img" src="../img/icons/for-2.svg" alt="Опытным специалистам помогающих профессий"/>
+                  <h4>Опытным специалистам помогающих профессий</h4>
+                </div>
+                <ul class="general-list general-list-black">
+                  <li>Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.</li>
+                  <li>Использование метода в&nbsp;групповой терапии, поможет повысить доход.</li>
+                  <li>Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.</li>
+                </ul>
+              </div>
             </div>
-            <div class="for-item">
-              <div class="for-item-title"><img class="for-item-img" src="../img/icons/for-2.svg" alt="Опытным специалистам помогающих профессий"/>
-                <h4>Опытным специалистам помогающих профессий</h4>
-              </div>
-              <ul class="general-list general-list-black">
-                <li>Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.</li>
-                <li>Использование метода в&nbsp;групповой терапии, поможет повысить доход.</li>
-                <li>Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.</li>
-              </ul>
-            </div><a class="button" href="#prices">Выбрать тариф</a>
-          </div>
+          </div><a class="button" href="#prices">Выбрать тариф</a>
         </div>
       </section>
       <div class="black-wrapper">
@@ -94,11 +96,11 @@
         </section>
         <section id="plan">
           <div class="container">
-            <div class="plan-wrapper"><img src="../img/backs/course-plan.png" alt="План курса"/>
+            <div class="plan-wrapper"><img class="mob-none-560" src="../img/backs/course-plan.png" alt="План курса"/><img class="d-none-560" src="../img/backs/course-plan-mob.png" alt="План курса"/>
               <div class="plan-wrapper-title">
                 <h3 class="general-title general-title-white general-title-plan">Программа курса</h3>
                 <p class="plan-text">Программа дипломного курса из&nbsp;53 видео-уроков:<br>продолжительность каждого урока - 2-3&nbsp;часа</p>
-              </div><a class="button plan-button" href="#!">Подробнее</a>
+              </div><a class="button plan-button" href="">Подробнее</a>
             </div>
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -168,10 +170,11 @@
           <div class="container">
             <div class="row">
               <div class="col-md-5">
-                <h4 class="general-title general-title-plan-filling"><span>В&nbsp;обучение входит</span></h4>
+                <h4 class="general-title general-title-plan-filling mob-none"><span>В&nbsp;обучение входит</span></h4>
               </div>
               <div class="col-md-7">
                 <div class="plan-filling-info">
+                  <h4 class="general-title general-title-plan-filling d-none"><span>В&nbsp;обучение входит</span></h4>
                   <ul class="plan-filling-info-list">
                     <li>53&nbsp;урока</li>
                     <li>закрытый чат курса</li>
@@ -197,7 +200,7 @@
               <div class="packet-body">
                 <p class="cost cost-sale">99&nbsp;000&nbsp;р.</p>
                 <p class="cost-text">с&nbsp;учетом гранта</p>
-                <p class="cost cost-full">вместо <span>149&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="">Забронировать место</a>
+                <p class="cost cost-full">вместо <span>149&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="#!" onclick="awoOpenFormModal(57)">Забронировать место</a>
               </div>
             </div>
             <div class="packet">
@@ -207,7 +210,7 @@
               <div class="packet-body">
                 <p class="cost cost-sale">199&nbsp;000&nbsp;р.</p>
                 <p class="cost-text">с&nbsp;учетом гранта</p>
-                <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="">Забронировать место</a>
+                <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="#!" onclick="awoOpenFormModal(57)">Забронировать место</a>
               </div>
             </div>
             <p class="packet-or">или</p>
@@ -216,13 +219,17 @@
           <div class="instalment">
             <div class="instalment-col instalment-col-1">
               <h4 class="instalment-title">Рассрочка от&nbsp;банка партнера</h4>
+            </div>
+            <div class="instalment-col instalment-col-2"><img class="instalment-img" src="../img/images/t.png" alt="Тинькоф"/>
+            </div>
+            <div class="instalment-col instalment-col-1">
               <ul class="instalment-list">
                 <li>На&nbsp;3, 6, 12 или 24 месяцев</li>
                 <li>Без&nbsp;первоначального взноса</li>
                 <li>Без&nbsp;переплат</li>
               </ul>
             </div>
-            <div class="instalment-col instalment-col-2"><img class="instalment-img" src="../img/images/t.png" alt="Тинькоф"/>
+            <div class="instalment-col instalment-col-2">
               <div class="instalment-text">
                 <p>Рассрочка доступна также гражданам <span>Беларуси, Казахстана, Узбекистана и Кыргызстана</span></p>
               </div>
@@ -234,8 +241,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-push-6">
-              <h4 class="author-title d-none"><small>Спикер</small><span>Жанна Абрамова</span></h4>
-              <div class="author-img"><img src="../img/images/janna-course.png" alt="Жанна Абрамова"/>
+              <h4 class="general-title general-title-author d-none"><small>Спикер</small><span>Жанна Абрамова</span></h4>
+              <div class="author-img"><img class="mob-none-560" src="../img/images/janna-course.png" alt="Жанна Абрамова"/><img class="d-none-560" src="../img/images/janna-course-mob.png" alt="Жанна Абрамова"/>
                 <p class="author-img-text">SKOLKOVO TECH & INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».</p>
               </div>
             </div>
@@ -256,7 +263,9 @@
       <section id="revs">
         <div class="container">
           <h3 class="general-title general-title-white">Отзывы</h3>
-          <div class="revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
+          <div class="content">
+            <div class="revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
+            </div>
           </div>
         </div>
       </section>
@@ -281,7 +290,7 @@
       </div>
     </footer>
     <script src="../js/course-libs.min.js"></script>
-    <script src="../js/course.min.js"></script>
+    <script src="../js/course.min.js"></script><script src="https://shop.iomp.ru/?r=fp/admin/getformscript&id=57&vc=358dfb8ea90b7cfdcbc23cb16d4e1f3e&popup=1&hideButton=1"></script> 
     <!-- BEGIN CALLPY CODE {literal}  -->
     <script>(function(w,t,p,v,c,f,s,r,h,l,d){w[p]="//callpy.com/";w[v]="5.10";w[c]=false;if(t==w){var tmp=l.callpy_data;if(tmp==null||!l.callpy_html||!l[c]){w[f]=false}else{w[f]=true;w[s]=JSON.parse(tmp);var tm=new Date().getTime();if(tm-w[s].lastSave<20000){if(w[s].insertcode){eval(w[s].insertcode)}else{w[f]=false}}else{w[f]=false}}}else{w[f]=false}var callpy_script=d.createElement("script");try{var tmp=parent.window.location.href?1:0}catch(e){var tmp=0}callpy_script.type="text/javascript";callpy_script.async=true;if(!w[f]||!l[h]){l[h]=new Date().getTime()}callpy_script.src=w[p]+"c/"+w.location.host.replace(/www./i,"")+"/"+(t==w?(w[f]?1:2):(tmp==1?4:3))+".js?id=19509&m="+l[h];callpy_script.onload=function(){iowisp.init()};d.body.appendChild(callpy_script)})(window,window.top,"callpy_path","callpy_version","tiny","sven","callpy_storage","callpy_chat_scroller","callpy_lastchat",localStorage,document);</script>
     <!-- {/literal} END CALLPY CODE  -->
