Course page is done

--- a/course/index.html
+++ b/course/index.html
@@ -82,7 +82,7 @@
         <section id="why">
           <div class="container">
             <h3 class="general-title general-title-white">Почему <span>именно наш институт</span><br class="mob-none"> нужно выбрать для обучения</h3>
-            <div class="why-items">
+            <div class="why-items mob-none">
               <p class="why-item">Опыт создания обучающих систем, проверенный временем</p>
               <p class="why-item">Звездный преподавательский состав</p>
               <p class="why-item">Не&nbsp;просто теория, а&nbsp;практика в&nbsp;процессе обучения</p>
@@ -92,6 +92,16 @@
               <p class="why-item">Инновационные методы тестирования знаний без&nbsp;зазубривания материала</p>
               <p class="why-item">Неограниченный доступ к&nbsp;материалам программы</p>
             </div>
+          </div>
+          <div class="owl-carousel why-items why-items-owl d-none">
+            <p class="why-item">Опыт создания обучающих систем, проверенный временем</p>
+            <p class="why-item">Звездный преподавательский состав</p>
+            <p class="why-item">Не&nbsp;просто теория, а&nbsp;практика в&nbsp;процессе обучения</p>
+            <p class="why-item">Супервизии в&nbsp;группе с&nbsp;практикующими специалистами</p>
+            <p class="why-item">Помощь в&nbsp;разборе вашей практики</p>
+            <p class="why-item">Тьютор на&nbsp;весь процесс обучения</p>
+            <p class="why-item">Инновационные методы тестирования знаний без&nbsp;зазубривания материала</p>
+            <p class="why-item">Неограниченный доступ к&nbsp;материалам программы</p>
           </div>
         </section>
         <section id="plan">
@@ -192,7 +202,7 @@
       <section id="prices">
         <div class="container">
           <h3 class="general-title"><span>Стоимость курса</span></h3>
-          <div class="packets">
+          <div class="packets mob-none">
             <div class="packet">
               <div class="packet-head">
                 <h4 class="packet-head-title">3 месяца<small>Ускоренное обучение</small></h4>
@@ -212,9 +222,34 @@
                 <p class="cost-text">с&nbsp;учетом гранта</p>
                 <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="#!" onclick="awoOpenFormModal(57)">Забронировать место</a>
               </div>
+              <p class="packet-or">или</p>
+            </div>
+          </div>
+        </div>
+        <div class="packets owl-carousel packets-c d-none">
+          <div class="packet">
+            <div class="packet-head">
+              <h4 class="packet-head-title">3 месяца<small>Ускоренное обучение</small></h4>
+            </div>
+            <div class="packet-body">
+              <p class="cost cost-sale">99&nbsp;000&nbsp;р.</p>
+              <p class="cost-text">с&nbsp;учетом гранта</p>
+              <p class="cost cost-full">вместо <span>149&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="#!" onclick="awoOpenFormModal(57)">Забронировать место</a>
+            </div>
+          </div>
+          <div class="packet">
+            <div class="packet-head">
+              <h4 class="packet-head-title">6 месяцев<small>Базовый</small></h4>
+            </div>
+            <div class="packet-body">
+              <p class="cost cost-sale">199&nbsp;000&nbsp;р.</p>
+              <p class="cost-text">с&nbsp;учетом гранта</p>
+              <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="#!" onclick="awoOpenFormModal(57)">Забронировать место</a>
             </div>
             <p class="packet-or">или</p>
           </div>
+        </div>
+        <div class="container">
           <p class="prices-text">Минимальный платеж по&nbsp;рассрочке <span>от 4125 руб\мес</span></p>
           <div class="instalment">
             <div class="instalment-col instalment-col-1">
@@ -263,10 +298,9 @@
       <section id="revs">
         <div class="container">
           <h3 class="general-title general-title-white">Отзывы</h3>
-          <div class="content">
-            <div class="revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
-            </div>
-          </div>
+          <div class="content"></div>
+        </div>
+        <div class="revs-slider-text owl-carousel"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
         </div>
       </section>
     </div>
